--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ textual-inputs = "^0.2.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+pynvim = "^0.4.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
